option(
  'gtk_doc',
  type : 'boolean',
  value : false,
  description : 'use gtk-doc to build documentation',
)

option(
  'installed_tests',
  type : 'boolean',
  value : true,
  description : 'enable installed tests',
)

option(
  'introspection',
  type : 'boolean',
  value : false,
  description : 'enable GObject-Introspection',
)

option(
  'man',
  type : 'boolean',
  value : true,
  description : 'enable man pages',
)

option(
  'multiarch_tuple',
  type : 'string',
  value : '',
  description : 'Debian-style multiarch tuple',
)

option(
  'python',
  type : 'string',
  value : '',
  description: 'Search for this Python instead of "python3.5" and "python3"'
)

