option('man', type : 'boolean', value : false, description : 'enable man pages')
option('python', type : 'string', value : '')
option('fully_featured_python', type : 'string', value : '')
option('srcdir', type : 'string', value : '')
option('test_containers_dir', type : 'string', value : '')
option('version', type : 'string', value : 'auto')
