# Copyright © 2019-2021 Collabora Ltd.
# SPDX-License-Identifier: MIT

option(
  'bin',
  type : 'boolean',
  value : true,
  description : 'Build user-facing executables',
)

option(
  'gtk_doc',
  type : 'boolean',
  value : false,
  description : 'use gtk-doc to build documentation',
)

option(
  'installed_tests',
  type : 'boolean',
  value : true,
  description : 'enable installed tests',
)

option(
  'introspection',
  type : 'boolean',
  value : false,
  description : 'enable GObject-Introspection',
)

option(
  'man',
  type : 'boolean',
  value : true,
  description : 'enable man pages',
)

option(
  'multiarch_tuple',
  type : 'string',
  value : '',
  description : 'Debian-style multiarch tuple',
)

option(
  'pressure_vessel',
  type : 'boolean',
  value : true,
  description : 'Build pressure-vessel container tool',
)

option(
  'python',
  type : 'string',
  value : '',
  description: 'Search for this Python instead of "python3.5" and "python3"'
)

option('fully_featured_python', type : 'string', value : '')
option('srcdir', type : 'string', value : '')
option('test_containers_dir', type : 'string', value : '')
option('version', type : 'string', value : 'auto')
